--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.1.3",
     "openai": "^4.28.4",
+    "polly-js": "^1.8.3",
     "react": "^18",
     "react-dom": "^18"
   },
