--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "next": "14.1.3",
     "openai": "^4.28.4",
     "polly-js": "^1.8.3",
